--- a/Style.css/Style.css
+++ b/Style.css/Style.css
@@ -1,3 +1,15 @@
+body{
+    font: size 20px;;
+}
+h1{
+    text-transform:uppercase;
+}
+span{
+    font-weight: bold;
+}
 .color1{
     color: rgb(242, 0, 255);
+}
+table{
+    background-color: blueviolet;
 }
