--- a/greencity/stylegreencity/style.css
+++ b/greencity/stylegreencity/style.css
@@ -7,6 +7,6 @@ body {
     margin: 0 auto;
 }
 .start {
-    margin: 0 auto;
+    margin: 1200px;
     background: url("../imggreencity/banner.png");
 }
