--- a/greencity/stylegreencity/style.css
+++ b/greencity/stylegreencity/style.css
@@ -10,3 +10,6 @@ body {
     background: url("../imggreencity/banner.png");
     width: 1200px;
 }
+.start td, .table-menu td {
+    text-align: center;
+}
