--- a/greencity/stylegreencity/style.css
+++ b/greencity/stylegreencity/style.css
@@ -5,6 +5,7 @@
 }
 body {
     margin: 0 auto;
+    font-family: Arial, Helvetica, sans-serif;
 }
 .start {
     background: url("../imggreencity/banner.png");
