--- a/greencity/stylegreencity/style.css
+++ b/greencity/stylegreencity/style.css
@@ -14,6 +14,7 @@ body {
 .table-menu td, .start td, a {
     text-align: center;
     color: white;
+    margin: 0 auto;
 }
 a {
     text-decoration: none;
