--- a/greencity/stylegreencity/style.css
+++ b/greencity/stylegreencity/style.css
@@ -40,8 +40,7 @@ span {
     color: green;
 }
 .help {
+    text-align: center;
+    color: white;
     margin: 0 auto;
-span {
-    color: green;
-    text-decoration: italic;
 }
